# box_finder

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  package.xml
config/: costmap_common_params.yaml  move_base_params.yaml
include/: AutomappingNode.h  Explorer.h  MoveToTableNode.h  RobotClass.hpp  TrueAngle.h
launch/: amcl.launch  automapping.launch  full_system.sh  gmapping.launch  move_base.launch  move_to_table.launch
map/: debug.world  test.pgm
rviz/: first_stage.rviz  second_stage.rviz
src/: AutomappingNode.cpp  Explorer.cpp  MoveToTableNode.cpp  RobotClass.cpp  TrueAngle.cpp  automapping.cpp  exploration.cpp  move_to_table.cpp
srv/: GetGoal.srv
