<?xml version="1.0"?>
<package>

    <name>box_finder</name>

    <version>1.0.0</version>

    <description>
        ROS package for students' project based on ROS navigation stack.
        It gives a mobile robot the ability to 1) automatically create
        map of unknown environment, 2) find a rectangular box with
        specified sizes within it using a created map, 3) come to found
        box.
    </description>

    <maintainer email="antonovspostbox@gmail.com">Evgeniy Antonov</maintainer>
    <maintainer email="nindz9@gmail.com">Aram Azbekyan</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>geometry_msgs</build_depend>
    <run_depend>geometry_msgs</run_depend>

    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>

    <build_depend>OpenCV</build_depend>
    <run_depend>OpenCV</run_depend>

    <build_depend>tf</build_depend>
    <run_depend>tf</run_depend>

    <build_depend>move_base_msgs</build_depend>
    <run_depend>move_base_msgs</run_depend>

    <build_depend>actionlib</build_depend>
    <run_depend>actionlib</run_depend>

    <build_depend>nav_msgs</build_depend>
    <run_depend>nav_msgs</run_depend>

    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>

    <export></export>

</package>
